Responsive images using different image sizes - about page

--- a/exercise5/about.html
+++ b/exercise5/about.html
@@ -21,7 +21,8 @@
   <div class="row">
     <div class="side">
       <h5>Photo of me:</h5>
-      <img src="assets/20230506_122239.jpg" width="20%" alt="Mathilda Boullenger in Sydney">
+      <img src="assets/20230506_122239_50_1_50.jpg" alt="Mathilda Boullenger in Sydney" class="large-screen">
+      <img src="assets/20230506_122239_50_1_50_1_50.jpg" alt="Mathilda Boullenger in Sydney" class="small-screen">
       <p>This is me in Sydney this year! <br> When I am not working on exciting projects on my computer, I love to spend
         time outside, hiking, exercising or traveling!</p>
       <h3>Background</h3>
